syntax = "proto2";
option csharp_namespace = "User";
package SSO;

//定义的服务
service UserService { 
  //登录获取token
  rpc Login (LoginInput) returns (LoginOutput); 
  // 判定账户状态
  rpc GetUserStatus(GetUserStatusInput) returns(GetUserStatusOutput); 
}
 //请求体
message LoginInput { 
  required  string Name = 1;
  required  string Password = 2;
}
 //响应体
message LoginOutput { 
  required  string Token = 1;
}

 //请求体
message GetUserStatusInput { 
  required  string Token = 1;
}
 //响应体
message GetUserStatusOutput { 
  required  bool IsNormal = 1;
}